objects/ltcomm__Learning_Order_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>ltcomm__Error__c</fullName>
        <label>Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ltcomm__Learning_Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Learning Order</label>
        <referenceTo>ltcomm__Learning_Order__c</referenceTo>
        <relationshipLabel>Learning Order Transactions</relationshipLabel>
        <relationshipName>Learning_Order_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ltcomm__PayPal_Transaction_Id__c</fullName>
        <label>PayPal Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ltcomm__Payment_Gateway__c</fullName>
        <label>Payment Gateway</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Stripe</fullName>
                </value>
                <value>
                    <fullName>Authorize.net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ltcomm__Response__c</fullName>
        <label>Response</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ltcomm__Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltcomm__Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Learning Order Transaction</label>
    <listViews>
        <fullName>ltcomm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOT-{000000}</displayFormat>
        <label>Learning Order Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Order Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>